# iot-fetcher

./: .dockerignore  .env.template  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  GH_RUNNER.md  Makefile  README.md  TAPO_IMPLEMENTATION_SUMMARY.md  balena-envs.sh  conductor.json  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  setup-github-auth.sh  start.sh  test_tapo_integration.py
.claude/: launch.json  settings.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: actionlint.yaml  copilot-instructions.md  dependabot.yaml
ai-assistant/: .env.example  .env.test  .gitignore  Dockerfile  Makefile  next.config.ts  package-lock.json  package.json  playwright.config.ts
claude-chat/: .env.example  .env.test  Dockerfile  Makefile  README.md  instrumentation.ts  middleware.ts  package-lock.json  package.json  playwright.config.ts
fetcher-core/: .gitignore  Dockerfile  Makefile  healthcheck.sh  start.sh
fetcher-core/python/: .env.template  pyproject.toml  requirements.txt  test_tapo_local_broadcast.py
fetcher-core/python/src/: _decorators.py  airquality.py  aqualink.py  aquatemp.py  backup_vm.py  balboa.py  deco.py  elpris.py  eufy.py  influx.py  main.py  ngenic.py  pool_pump_actuator.py  pool_pump_planner.py  sonos.py  test_eufy.py
gdrive-rag/: .env.template  Dockerfile  go.mod  (+3 more)
python/: .env.template  pyproject.toml  requirements.txt
python/src/: airquality.py  aqualink.py  aquatemp.py  backup_influx.py  balboa.py  elpris.py  influx.py  main.py  ngenic.py  sigenergy.py  tapo.py  tapo_cloud.py  tapo_local.py  tapo_module.py  web.py
(+330 files in other folders)
