[project]
name = "iot-fetcher"
version = "0.1.0"
description = "IoT data aggregation platform for smart home devices"
requires-python = ">=3.13"
dependencies = [
    "requests==2.32.5",
    "pybalboa==1.1.3",
    "influxdb-client[async]==1.49.0",
    "tuya-connector-python==0.1.2",
    "schedule==1.2.2",
    "google-cloud-storage==3.4.1",
    "ngenicpy==0.5.2",
    "SigenAPI==1.0.0",
    "pyModbusTCP==0.3.0",
    "iaqualink==0.6.0",
    "plugp100==5.1.5",
]

[project.optional-dependencies]
debug = [
    "debugpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
