[project]
name = "iot-fetcher"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "requests==2.33.0",
    "pybalboa==1.1.4",
    "pytz>=2024.2",
    "influxdb3-python==0.18.0",
    "tuya-connector-python==0.1.2",
    "schedule==1.2.2",
    "google-cloud-storage==3.10.1",
    "ngenicpy==0.5.2",
    "SigenAPI==1.0.0",
    "pyModbusTCP==0.3.0",
    "iaqualink==0.6.0",
    "plugp100==5.1.7",
    "tplinkrouterc6u==5.16.0",
]
